# opa-macht-auge

./: .editorconfig  .env.example  .gitignore  README.md  docker-compose.yml  justfile
.github/workflows/: release-apk.yml
app/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml
app/android/: gradle.properties
app/android/app/: build.gradle.kts  proguard-rules.pro
app/assets/branding/: README.txt
app/assets/models/: .gitkeep  dinov2_small.preprocess.json
app/lib/: main.dart
app/lib/core/: app_updater.dart  http_client.dart  router.dart  sound_service.dart  theme.dart
app/lib/data/api/: cards_api.dart  identify_api.dart  snapshot_api.dart
app/lib/data/dto/: card_dto.dart  card_summary_dto.dart  identify_dto.dart
app/lib/data/local/: database.dart  scan_history_entry.dart  scan_history_store.dart
app/lib/detector/: detection.dart  detector_service.dart
app/lib/embedder/: camera_image_converter.dart  embedder_service.dart  local_index.dart  preprocess.dart
app/lib/features/catalog/: card_detail_screen.dart  catalog_screen.dart
app/lib/features/collection/: collection_screen.dart
app/lib/features/history/: history_screen.dart
app/lib/features/home/: home_screen.dart  update_banner.dart
app/lib/features/market/: market_screen.dart
app/lib/features/scan/: scan_controller.dart  scan_screen.dart
app/lib/ocr/: ocr_service.dart
app/test/: smoke_test.dart
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: .gitkeep  32f85c3453d1_add_cardmarket_metacard_id.py  4928e3e09350_add_cardmarket_ids.py  6854c91e7389_add_printed_total_to_card_sets.py  c190957c81df_init.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: _schemas.py  cards.py  health.py  identify.py  prices.py  router.py  snapshots.py
backend/app/core/: __init__.py  config.py  logging.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/domain/: __init__.py  enums.py
backend/app/infra/: __init__.py  models.py
backend/tests/: conftest.py  test_cards_prices.py  test_health.py  test_snapshot.py
infra/postgres/init/: 01_extensions.sql
ml/: .dvcignore  README.md  pyproject.toml
ml/ml/: __init__.py  config.py
ml/ml/bootstrap/: __init__.py  cardmarket_catalog.py  cardmarket_prices.py  pokemontcg.py  refresh_printed_total.py  tcgdex.py
ml/ml/detector/: __init__.py  synth_dataset.py  train.py
ml/ml/embedder/: __init__.py  build_index.py  export_onnx.py  patch_resize_cubic.py  quantize_onnx.py  verify_onnx.py
scripts/: move-wsl-to-g.ps1  post-reboot-continue.ps1  setup-admin.ps1  train_overnight.ps1
shared/: openapi.yaml
(+3 files in other folders)
